test/cli/scenarios_to_cli/other /scenario_mutate_pod_spec/kyverno-test.yaml
name : mutate-pods-spec
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: mutate-pods-spec
    rule: disable-servicelink-and-token
    resource: nginx-deployment
    kind: Deployment
    result: pass
