test/cli/scenarios_to_cli/other /scenario_mutate_pod_spec/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-pods-spec
spec:
  rules:
    - name: "disable-servicelink-and-token"
      match:
        all:
        - resources:
              kinds:
                - DaemonSet
                - Deployment
                - Job
                - StatefulSet
            namespaces:
              - test-foo-*
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                automountServiceAccountToken: false
                enableServiceLinks: false
